# ImageFX

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini  vkvia.html
assets/: params.json
assets/shaders/: compute.comp  fonts.frag  fonts.vert  quad.frag  quad.vert  shader.frag  shader.vert  test.comp  triangle.vert
src/: application.cpp  application.h  globals.cpp  globals.h  logger.h  main.cpp  safpch.h
src/core/: application.cpp  application.h  definitions.cpp  definitions.h  entrypoint.cpp  input.cpp  input.h  window.cpp  window.h
src/input/: application_event.h  event.h  key_event.h  mouse_event.h
src/input/camera/: camera.cpp  camera.h
src/platform/: vulkangraphics.h
src/render/: graphics.cpp  graphics.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h
src/utils/: argumentmanager.cpp  argumentmanager.h  log.cpp  log.h  maths.h  meshfactory.cpp  meshfactory.h  stbimpl.cpp  vmaimpl.cpp
